2005-03-21  Naba Kumar  <naba@gnome.org>

	Patch from: Massimo Cora' <maxcvs@email.it>:
	
	* plugins/editor/Makefile.am
	plugins/editor/anjuta-docman.c,
	(added) plugins/editor/editor-tooltips.c,
	(added) plugins/editor/editor-tooltips.h: Added tooltips to
	editor tabs to show full path.

2005-03-19	Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/subversion/svn-backend.c:
	Removed "apr-0/" from include because this is 
	already included in SVN_INCLUDE and broke building if
	apr >= 1.0 was installed.

2005-03-18  Naba Kumar  <naba@gnome.org>

	Patch from: Massimo Cora' <maxcvs@email.it>:

	* plugins/editor/action-callbacks.c,
	plugins/editor/aneditor-calltip.cxx,
	plugins/editor/aneditor-priv.h,
	plugins/editor/aneditor.cxx,
	plugins/editor/aneditor.h,
	plugins/editor/anjuta-document-manager.ui: Added calltip
	activation from menu.

2005-03-16  Naba Kumar  <naba@gnome.org>

	Patch from: Massimo Cora' <maxcvs@email.it>:
	
	* plugins/class-gen/action-callbacks.c,
	plugins/class-gen/anjuta-class-gen-plugin.glade,
	plugins/class-gen/class_gen.c,
	plugins/class-gen/class_gen.h,
	plugins/class-gen/class_logo.xpm,
	plugins/class-gen/plugin.c: Create files without project
	being open. Add to project support. And other enhancements.

2005-03-15  Adam Weinberger  <adamw@gnome.org>

	* anjuta.glade,
	  plugins/debug-manager/utilities.c,
	  plugins/file-loader/plugin.c,
	  plugins/gdb/utilities.c,
	  plugins/profile-default/plugin.c,
	  plugins/project-import/project-import.c,
	  src/anjuta-actions.h:
	  Spelling/grammar fixes.

2005-03-13  Naba Kumar  <naba@gnome.org>
	
	* plugins/editor/action-callbacks.c,
	plugins/editor/action-callbacks.h,
	plugins/editor/anjuta-document-manager.ui,
	plugins/editor/plugin.c: Cleaned up editor UI and get rid of 'Format'
	submenu. Moved menuitems from Format to View->Editor.
	
	* src/action-callbacks.c, src/action-callbacks.h,
	src/anjuta-actions.h, src/anjuta-app.c, src/anjuta.ui: Created Reset