@@ -1210,14 +1210,14 @@ on_toolbar_find_clicked (GtkAction *action, gpointer user_data)
 			if (search_wrap == FALSE)
 			{
 				anjuta_status_push(status,
-					_("Failling I-Search: '%s'. Press Enter or click Find to overwrap."),
+					-("Incremental search for '%S' failed. Press Enter or click Find to continue searching at the top."),
 					string);
 				search_params->wrap = 1;
 				gdk_beep();
 			}
 			else
 			{
-				anjuta_status_push (status, _("Failling Overwrapped I-Search: %s."), 
+				anjuta_status_push (status, _("Incremental search for '%s' (continued at top) failed."), 
 				                    string);
 			}
 		}
